# pleme-brazilian-validators

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: cep.rs  cnpj.rs  cpf.rs  error.rs  lib.rs  phone.rs  pix.rs
